--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ amplify/mock-data
 amplify/mock-api-resources
 amplify/backend/amplify-meta.json
 amplify/backend/.temp
+assets/*
 build/
 dist/
 node_modules/
