--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -5,28 +5,19 @@
       "customAuth": true,
       "dependsOn": [
         {
-          "attributes": [
-            "Arn",
-            "Name"
-          ],
+          "attributes": ["Arn", "Name"],
           "category": "function",
           "resourceName": "wordsleuth1e407bba1e407bbaCreateAuthChallenge",
           "triggerProvider": "Cognito"
         },
         {
-          "attributes": [
-            "Arn",
-            "Name"
-          ],
+          "attributes": ["Arn", "Name"],
           "category": "function",
           "resourceName": "wordsleuth1e407bba1e407bbaDefineAuthChallenge",
           "triggerProvider": "Cognito"
         },
         {
-          "attributes": [
-            "Arn",
-            "Name"
-          ],
+          "attributes": ["Arn", "Name"],
           "category": "function",
           "resourceName": "wordsleuth1e407bba1e407bbaVerifyAuthChallengeResponse",
           "triggerProvider": "Cognito"
@@ -35,21 +26,15 @@
       "frontendAuthConfig": {
         "SourceArn": "COGNITO_DEFAULT",
         "mfaConfiguration": "OFF",
-        "mfaTypes": [
-          "SMS"
-        ],
+        "mfaTypes": ["SMS"],
         "passwordProtectionSettings": {
           "passwordPolicyCharacters": [],
           "passwordPolicyMinLength": 8
         },
-        "signupAttributes": [
-          "EMAIL"
-        ],
+        "signupAttributes": ["EMAIL"],
         "socialProviders": [],
         "usernameAttributes": [],
-        "verificationMechanisms": [
-          "EMAIL"
-        ]
+        "verificationMechanisms": ["EMAIL"]
       },
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
@@ -67,11 +52,6 @@
       "service": "Lambda"
     },
     "wordsleuth1e407bba1e407bbaVerifyAuthChallengeResponse": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    },
-    "wordsleuth5da081185da08118DefineAuthChallenge": {
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
@@ -123,22 +103,6 @@
         {
           "category": "function",
           "resourceName": "wordsleuth1e407bba1e407bbaVerifyAuthChallengeResponse"
-        }
-      ]
-    },
-    "AMPLIFY_function_wordsleuth5da081185da08118DefineAuthChallenge_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "wordsleuth5da081185da08118DefineAuthChallenge"
-        }
-      ]
-    },
-    "AMPLIFY_function_wordsleuth5da081185da08118DefineAuthChallenge_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "wordsleuth5da081185da08118DefineAuthChallenge"
         }
       ]
     }
