--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # amplify
   amplify_flutter: ^0.6.0
+  amplify_api: ^0.6.0
   amplify_auth_cognito: ^0.6.0
 
   # The following adds the Cupertino Icons font to your application.
